# HaloX

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CPM.cmake  dependency-management.cmake
src/: common.h
src/game/: game_event_manager.h  game_event_manager.main.cpp  game_instance_manager.h  game_instance_manager.launch.cpp  game_instance_manager.local.cpp  game_instance_manager.main.cpp  game_instance_manager.module.cpp  game_instance_manager.win32.cpp  game_manager.h  game_manager.input.cpp  game_manager.interface.cpp  game_manager.misc.cpp  game_manager.network.cpp  game_manager.player.cpp  game_manager.render.cpp  game_manager.runtime.cpp  game_manager.setting.cpp  game_manager.storage.cpp  game_manager.text.cpp  game_options.h  game_options.main.cpp
src/geometry/: rect_pack.cpp  rect_pack.h
src/hook/: hook_manager.cpp  hook_manager.h  patch_manager.cpp  patch_manager.h  vftable_manager.cpp  vftable_manager.h
src/logging/: logging.cpp  logging.h
src/main/: main.cpp  main.h  main.render.cpp  main.render.game.cpp  main.render.game.halo3.cpp  main.render.player.cpp  main.win32.cpp  win32.dbg.cpp  win32.file.cpp  win32.h
src/module/halo3/: halo3.cpp  halo3.h
src/module/halo3/cache/: tag_cache.h
src/module/halo3/game/: game.cpp  game.h
src/module/halo3/render/view/: render_player_view.cpp  render_player_view.h
src/player/: player_manager.cpp  player_manager.h
src/rasterizer/: rasterizer.h  rasterizer.imgui.cpp  rasterizer.surface.cpp  rasterizer.win32.cpp  rasterizer.x3d11.cpp
src/render/: imgui_dollycam_view.cpp  imgui_dollycam_view.h  imgui_game_halo3_view.cpp  imgui_game_halo3_view.h  imgui_game_view.cpp  imgui_game_view.h  imgui_graph_editor_view.cpp  imgui_graph_editor_view.h  imgui_main_view.cpp  imgui_main_view.h  imgui_player_view.cpp  imgui_player_view.h  imgui_view.h
src/text/: font_cache.cpp  font_cache.h  font_package.cpp  font_package.h
src/thread/: thread_safe_queue.h
src/tool/: import_unreal_font.cpp  import_unreal_font.h  import_windows_font.cpp  import_windows_font.h  tool.cpp  tool.h
